Login, register, change imgs

--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
     <link rel="stylesheet" href="lobby.css">
 </head>
 
-
-
-
-
-
 <body>
-
+    <header>
+        <img src="img/Bucar_Logo.png" width="150">
+        <div id="btns">
+            <a href="registro.html" class="btnReg btnMorado">Registrarme</a>
+            <a href="login.html" class="btnIng btnMorado">Ingresar</a>
+        </div>
+    </header>
+    <hr color="#283134">
+    <section class="contenido">
+        <article>
+            <h2>Llega a cualquier lugar, completamente gratis</h2>
+        </article>
+        <article class="izqcel">
+            <p>Siempre al tanto de las nuevas rutas</p><img src="img/Imagen_Mirando_Cel.png" width="200">
+        </article>
+        <article class="cencel">
+            <p>Seguro y de confianza</p><img src="img/Imagen_Dialogo.png" width="200">
+        </article>
+        <article class="dercel">
+            <p>Se acomoda a tus necesidades</p><img src="img/Imagen_Telefono.png" width="200">
+        </article>
+    </section>
 </body>
 
 </html>
