--- a/index.html
+++ b/index.html
@@ -21,16 +21,34 @@
         <article>
             <h2>Llega a cualquier lugar, completamente gratis</h2>
         </article>
-        <article class="izqcel">
-            <p>Siempre al tanto de las nuevas rutas</p><img src="img/Imagen_Mirando_Cel.png" width="200">
+        <article>
+            <img src="img/Imagen_Mirando_Cel.png" width="300">
+            <p>Siempre al tanto de las nuevas rutas</p>
         </article>
-        <article class="cencel">
-            <p>Seguro y de confianza</p><img src="img/Imagen_Dialogo.png" width="200">
+        <article>
+            <img src="img/Imagen_Dialogo.png" width="300">
+            <p>Seguro y de confianza</p>
         </article>
-        <article class="dercel">
-            <p>Se acomoda a tus necesidades</p><img src="img/Imagen_Telefono.png" width="200">
+        <article>
+            <img src="img/Imagen_Telefono.png" width="300">
+            <p>Se acomoda a tus necesidades</p>
         </article>
     </section>
+    <footer>
+        <br><br>
+        <section>
+            <a href="#">Blog</a>
+        </section>
+        <br>
+        <section>
+            <a href="#">P.Q.R</a>
+        </section>
+        <br>
+        <section>
+            <a href="#">Redes sociales</a>
+        </section>
+        <h4>JeJuVa Inc.</h4>
+    </footer>
 </body>
 
 </html>
