Login y Register hechos

--- a/Ingresado.html
+++ b/Ingresado.html
@@ -5,15 +5,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="lobby.css">
+    <link rel="stylesheet" href="ingresado.css">
 </head>
 
 <body>
     <header>
         <img src="img/Bucar_Logo.png" width="150">
-        <div id="btns">
-            <a href="registro.html" class="btnReg btnMorado">Registrarme</a>
-            <a href="login.html" class="btnIng btnMorado">Ingresar</a>
+        <div>
+
         </div>
     </header>
     <hr color="#283134">
